--- a/blog-MainIndex.html
+++ b/blog-MainIndex.html
@@ -423,6 +423,68 @@
                 </div>
 				<!-- End Blog 10 -->
 
+				<!-- Blog 11 -->
+                <div class="col-lg-4 col-md-6 col-sm-6 mix sql">
+                    <div class="blog__item">
+						<!-- Blog Photo -->
+						<p>
+							<a href="blog11.html">
+							<img src="images/tech/sql05.jpg" alt="sql" style="max-width: 100%; height: auto;">
+							</a>
+						</p>
+						<!-- Title -->
+                        <p><h8><a href="blog11.html">Indexing in SQL</a></h8></p>
+						<p>March 2023</p>
+
+                        	<!-- Authors Info -->
+							<div class="author mb-4 d-flex align-items-center">
+								<a href="index.html" class="img" style="background-image: url(images/ocean.jpg); width: 50px; height: 50px; display: inline-block; border-radius: 50%;"></a>
+								<div class="ml-3 info">
+									<span>Written by</span>
+									<p>Carissa O'Connell</p>
+								</div>
+							</div>
+							<!-- End Authors Info -->
+
+						<!-- Blog Description -->
+						<p>A SQL index is a quick lookup table for finding records users need to search frequently.</p>
+                        <a href="blog11.html"><span>Read more</span></a>
+                    </div>
+                </div>
+				<!-- End Blog 11 -->
+
+				<!-- Blog 12 -->
+                <div class="col-lg-4 col-md-6 col-sm-6 mix system-managment">
+                    <div class="blog__item">
+						<!-- Blog Photo -->
+						<p>
+							<a href="blog12.html">
+							<img src="images/tech/porters-strategies.png.webp" alt="sql" style="max-width: 100%; height: auto;">
+							</a>
+						</p>
+						<!-- Title -->
+                        <p><h8><a href="blog12.html">Porter's 3 Strategies</a></h8></p>
+						<p>June 2022</p>
+
+                        	<!-- Authors Info -->
+							<div class="author mb-4 d-flex align-items-center">
+								<a href="index.html" class="img" style="background-image: url(images/ocean.jpg); width: 50px; height: 50px; display: inline-block; border-radius: 50%;"></a>
+								<div class="ml-3 info">
+									<span>Written by</span>
+									<p>Carissa O'Connell</p>
+								</div>
+							</div>
+							<!-- End Authors Info -->
+
+						<!-- Blog Description -->
+						<p>Porter’s three generic strategies could be used as a method which businesses could 
+							use to define their goals. Its general definitions allow for his strategies to 
+							“be applied to any business, product, or service”.</p>
+                        <a href="blog12.html"><span>Read more</span></a>
+                    </div>
+                </div>
+				<!-- End Blog 12 -->
+
         </div> <!-- gallery end rows for blog items -->
 
         </div> <!-- end div class="col-lg-12" -->
