--- a/blog-MainIndex.html
+++ b/blog-MainIndex.html
@@ -485,6 +485,36 @@
                 </div>
 				<!-- End Blog 12 -->
 
+				<!-- Blog 13 -->
+                <div class="col-lg-4 col-md-6 col-sm-6 mix software">
+                    <div class="blog__item">
+						<!-- Blog Photo -->
+						<p>
+							<a href="blog14.html">
+							<img src="images/galaxy.jpg" alt="sql" style="max-width: 100%; height: auto;">
+							</a>
+						</p>
+						<!-- Title -->
+                        <p><h8><a href="blog14.html">The Art of Discernment</a></h8></p>
+						<p>July 2024</p>
+
+                        	<!-- Authors Info -->
+							<div class="author mb-4 d-flex align-items-center">
+								<a href="index.html" class="img" style="background-image: url(images/ocean.jpg); width: 50px; height: 50px; display: inline-block; border-radius: 50%;"></a>
+								<div class="ml-3 info">
+									<span>Written by</span>
+									<p>Carissa O'Connell</p>
+								</div>
+							</div>
+							<!-- End Authors Info -->
+
+						<!-- Blog Description -->
+						<p>Exercising discernment means being able to distinguish between what's essential for the program, prioritizing tasks, and making informed decisions that drive the project forward.</p>
+                        <a href="blog14.html"><span>Read more</span></a>
+                    </div>
+                </div>
+				<!-- End Blog 12 -->
+
         </div> <!-- gallery end rows for blog items -->
 
         </div> <!-- end div class="col-lg-12" -->
