--- a/index.html
+++ b/index.html
@@ -88,6 +88,22 @@
 			<section id="colorlib-hero" class="js-fullheight" data-section="home">
 				<div class="flexslider js-fullheight">
 					<ul class="slides">
+						<li style="background-image: url(images/backgrounds/vintage-books.jpg);">
+							<div class="overlay"></div>
+							<div class="container-fluid">
+								<div class="row">
+									<div class="col-md-6 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
+										<div class="slider-text-inner js-fullheight">
+											<div class="desc">
+											 <h1>New Blog!</h1>
+											 <h2><a href="https://carissaoconnell.github.io/blog14.html">The Art of Discernment</a></h2>
+												 <p><a class="btn btn-primary btn-learn" href="https://carissaoconnell.github.io/blog-MainIndex.html">Blogs -> Software<i class="icon-briefcase3"></i></a></p>
+											 </div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</li>
 						<li style="background-image: url(images/ocean01.jpg);">
 				   		<div class="overlay"></div>
 				   		<div class="container-fluid">
@@ -120,6 +136,9 @@
 				   	</li>
 				  	</ul>
 			  	</div>
+				  <p>
+					<a href="https://www.freepik.com/">Images by freepik <span class="icon-camera"></span></a> 
+				</p>
 			</section>
 
 
