--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
 									<div class="services color-2">
 										<span class="icon2"><i class="icon-globe-outline"></i></span>
-										<h3><a href="https://github.com/carissaoconnell/Javascript">Javascript</a></h3>
+										<h3><a href="https://github.com/carissaoconnell/Python">Python</a></h3>
 									</div>
 								</div>
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInTop">
