--- a/blog13.html
+++ b/blog13.html
@@ -53,34 +53,29 @@
 				<h1 id="colorlib-logo"><a href="index.html">Carissa O'Connell</a></h1>
 				<span class="position"><a href="index.html">Full Stack Software Developer</a> currently in Florida </span>
 			</div>
+		
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
 					<ul>
 						<li><a href="index.html" data-nav-section="home">Home</a></li>
-						<li><a href="index.html" data-nav-section="about">About</a></li>
-						<li><a href="index.html" data-nav-section="services">Craftmanship</a></li>
-						<li><a href="index.html" data-nav-section="skills">Skills</a></li>
-						<li><a href="index.html" data-nav-section="education">Education</a></li>
-						<li><a href="index.html" data-nav-section="experience">Experience</a></li>
+						<li><a href="index-about.html" data-nav-section="about">About</a></li>
 						<li><a href="blog-Projects.html" data-nav-section="projects">Projects</a></li>
 						<li class="active"><a href="blog-MainIndex.html" data-nav-section="blog">Blogs</a></li>
-						<li><a href="index.html" data-nav-section="contact">Contact</a></li>
 					</ul>
 				</div>
 			</nav>
-
+		
 			<div class="colorlib-footer">
-					<ul>
-						<li><a href="mailto:modern.program.geek@gmail.com"><i class="icon-mail"></i></a></li>
-						<li><a href="#"><i class="icon-instagram"></i></a></li>
-						<li><a href="https://www.linkedin.com/in/carissa-oconnell/"><i class="icon-linkedin2"></i></a></li>
-					</ul>
+				<ul>
+					<li><a href="mailto:modern.program.geek@gmail.com"><i class="icon-mail"></i></a></li>
+					<li><a href="https://www.linkedin.com/in/carissa-oconnell/"><i class="icon-linkedin2"></i></a></li>
+				</ul>
 			</div>
-
-			<p><small>&copy; <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-				Copyright <script>document.write(new Date().getFullYear());</script> All rights reserved. Made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-				<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --> </span></small></p>
-
+		
+		<p><small>&copy; <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+			Copyright <script>document.write(new Date().getFullYear());</script> All rights reserved. Made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+			<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --> </span></small></p>
+		
 		</aside>
 		<!-- END COLORLIB-ASIDE -->
 
