--- a/blog-MainIndex.html
+++ b/blog-MainIndex.html
@@ -58,11 +58,7 @@
 
 					<ul>
 						<li><a href="index.html" data-nav-section="home">Home</a></li>
-						<li><a href="index.html" data-nav-section="about">About</a></li>
-						<li><a href="index.html" data-nav-section="services">Craftmanship</a></li>
-						<li><a href="index.html" data-nav-section="skills">Skills</a></li>
-						<li><a href="index.html" data-nav-section="education">Education</a></li>
-						<li><a href="index.html" data-nav-section="experience">Experience</a></li>
+						<li><a href="index-about.html" data-nav-section="about">About</a></li>
 						<li><a href="blog-Projects.html" data-nav-section="projects">Projects</a></li>
 						<li class="active"><a href="blog-MainIndex.html" data-nav-section="blog">Blogs</a></li>
 					</ul>
@@ -72,7 +68,6 @@
 			<div class="colorlib-footer">
 					<ul>
 						<li><a href="mailto:modern.program.geek@gmail.com"><i class="icon-mail"></i></a></li>
-						<li><a href="#"><i class="icon-instagram"></i></a></li>
 						<li><a href="https://www.linkedin.com/in/carissa-oconnell/"><i class="icon-linkedin2"></i></a></li>
 					</ul>
 			</div>
@@ -98,8 +93,6 @@
 					</div>
 				</div>
 			</div>
-
-
 
 
     <!-- Blog Section Begin -->
