--- a/blog-Projects.html
+++ b/blog-Projects.html
@@ -63,11 +63,7 @@
 
 					<ul>
 						<li><a href="index.html" data-nav-section="home">Home</a></li>
-						<li><a href="index.html" data-nav-section="about">About</a></li>
-						<li><a href="index.html" data-nav-section="services">Craftmanship</a></li>
-						<li><a href="index.html" data-nav-section="skills">Skills</a></li>
-						<li><a href="index.html" data-nav-section="education">Education</a></li>
-						<li><a href="index.html" data-nav-section="experience">Experience</a></li>
+						<li><a href="index-about.html" data-nav-section="about">About</a></li>
 						<li class="active"><a href="blog-Projects.html" data-nav-section="projects">Projects</a></li>
 						<li><a href="blog-MainIndex.html" data-nav-section="blog">Blogs</a></li>
 					</ul>
@@ -77,7 +73,6 @@
 			<div class="colorlib-footer">
 					<ul>
 						<li><a href="mailto:modern.program.geek@gmail.com"><i class="icon-mail"></i></a></li>
-						<li><a href="#"><i class="icon-instagram"></i></a></li>
 						<li><a href="https://www.linkedin.com/in/carissa-oconnell/"><i class="icon-linkedin2"></i></a></li>
 					</ul>
 			</div>
@@ -176,8 +171,8 @@
 							<li><h10><a href="#employeemanagmentsystem">Employee Management System</a></h10></li>
 						</ul>
 						-->
-	
-	    	<div class="container">
+
+
 	    		<!-- First Section -->
 				<div class="row">
                     <h11><b>Latest Projects</b></h11>
