--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 										   <div class="slider-text-inner">
 											   <div class="desc">
 												<h1>Passionate Full Stack Software Developer</h1>
-												<p>Let's create programs that help people work efficently!</p>
+												<h3>Let's create programs that help people work efficently!</h3>
 												<p><a class="btn btn-primary btn-learn" href="files/Software Engineer Resume - Github.pdf" download>Download Resume <i class="icon-download4"></i></a></p>
 												</div>
 										   </div>
