--- a/blog-MainIndex.html
+++ b/blog-MainIndex.html
@@ -506,7 +506,37 @@
                         <a href="blog14.html"><span>Read more</span></a>
                     </div>
                 </div>
-				<!-- End Blog 12 -->
+				<!-- End Blog 13 -->
+
+				<!-- Blog 14 -->
+                <div class="col-lg-4 col-md-6 col-sm-6 mix data-strucutres">
+                    <div class="blog__item">
+						<!-- Blog Photo -->
+						<p>
+							<a href="blog15.html">
+							<img src="images/backgrounds/sailing.webp" alt="sailing" style="max-width: 100%; height: auto;">
+							</a>
+						</p>
+						<!-- Title -->
+                        <p><h8><a href="blog03.html">Navigating the High Seas</a></h8></p>
+						<p>July 2024</p>
+
+                        	<!-- Authors Info -->
+							<div class="author mb-4 d-flex align-items-center">
+								<a href="index.html" class="img" style="background-image: url(images/ocean.jpg); width: 50px; height: 50px; display: inline-block; border-radius: 50%;"></a>
+								<div class="ml-3 info">
+									<span>Written by</span>
+									<p>Carissa O'Connell</p>
+								</div>
+							</div>
+							<!-- End Authors Info -->
+
+						<!-- Blog Description -->
+						<p>I created a playful calculator that uses Dijkstra's algorithm to find the shortest distance between each location. </p>
+                        <a href="blog03.html"><span>Read more</span></a>
+                    </div>
+                </div>
+				<!-- End Blog 14 -->
 
         </div> <!-- gallery end rows for blog items -->
 
