--- a/blog-MainIndex.html
+++ b/blog-MainIndex.html
@@ -44,6 +44,27 @@
   </head>
   <body>
 
+				<!-- Page Preloder -->
+				<div class="loader">
+					<div class="loader-inner">
+						<div class="loader-line-wrap">
+							<div class="loader-line"></div>
+						</div>
+						<div class="loader-line-wrap">
+							<div class="loader-line"></div>
+						</div>
+						<div class="loader-line-wrap">
+							<div class="loader-line"></div>
+						</div>
+						<div class="loader-line-wrap">
+							<div class="loader-line"></div>
+						</div>
+						<div class="loader-line-wrap">
+							<div class="loader-line"></div>
+						</div>
+					</div>
+				</div>
+
 	<div id="colorlib-page">
 		<div class="container-wrap">
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a>
@@ -637,6 +658,8 @@
   <script src="jsElen/main.js"></script>
 
   <script src="jsElen/mixitup.min.js"></script>
+
+  <script src="js/preloader.js"></script>	
     
   </body>
 </html>
