--- a/index-about.html
+++ b/index-about.html
@@ -46,6 +46,27 @@
 	</head>
 	<body>
 
+			<!-- Page Preloder -->
+			 <div class="loader">
+				<div class="loader-inner">
+					<div class="loader-line-wrap">
+						<div class="loader-line"></div>
+					</div>
+					<div class="loader-line-wrap">
+						<div class="loader-line"></div>
+					</div>
+					<div class="loader-line-wrap">
+						<div class="loader-line"></div>
+					</div>
+					<div class="loader-line-wrap">
+						<div class="loader-line"></div>
+					</div>
+					<div class="loader-line-wrap">
+						<div class="loader-line"></div>
+					</div>
+				</div>
+			</div>
+
 	<div id="colorlib-page">
 		<div class="container-wrap">
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a>
@@ -762,7 +783,7 @@
 	<!-- Counters -->
 	<script src="js/jquery.countTo.js"></script>
 
-	<script src="js/loader.js"></script>
+	<script src="js/preloader.js"></script>	
 	
 	<!-- MAIN JS -->
 	<script src="js/main.js"></script>
