--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 								<h3><a href="project-word-wizard-blog.html">Word Wizard</a></h3>
 								<span>App</span>
 							  </div>
-							  <img src="images/galaxy.jpg" alt="galaxy" class="card-image-bottom">
+							  <img src="images/magic-book.JPG" alt="galaxy" class="card-image-bottom">
 							</div>
 						  </div>
 						</div>
@@ -303,11 +303,11 @@
 					<div class="row">
 						<div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="blog-entry">
-								<a href="blog01.html" class="blog-img"><img src="images/tech/computer-vegetation.jpg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
+								<a href="blog15.html" class="blog-img"><img src="images/backgrounds/sailing.webp" class="img-responsive" alt="sailing"></a>
 								<div class="desc">
-									<span><small>Nov 2022 </small> | <small> Software </small> | <small> <i class="icon-bubble3"></i> 0</small></span>
-									<h3><a href="blog01.html">Software Methodologies</a></h3>
-									<p>By understanding each type of methodolgy, it helps to determine which methodology could work best for the team and project. </p>
+									<span><small>July 2024 </small> | <small> Data Structures and Algorithms </small> | <small> <i class="icon-bubble3"></i> 0</small></span>
+									<h3><a href="blog15.html">Navigating the High Seas</a></h3>
+									<p>I created a playful calculator that uses Dijkstra's algorithm to find the shortest distance between each location.</p>
 								</div>
 							</div>
 						</div>
@@ -315,11 +315,11 @@
 						<!-- Blog 2 -->
 						<div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="blog-entry">
-								<a href="blog03.html" class="blog-img"><img src="images/tech/data-economy.jpg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
+								<a href="blog14.html" class="blog-img"><img src="images/galaxy.jpg" class="img-responsive" alt="galaxy"></a>
 								<div class="desc">
-									<span><small>Dec 2020 </small> | <small> Data Structures and Algorithms </small> | <small> <i class="icon-bubble3"></i> 0</small></span>
-									<h3><a href="blog03.html">Data Algorithms</a></h3>
-									<p>Data Algorithms are a set of instructions used to solve a specific problem. Examples of Data Algorithms include search algorithms, sorting algorithms, and graph algorithms.</p>
+									<span><small>July 2024 </small> | <small>Software</small> | <small> <i class="icon-bubble3"></i> 0</small></span>
+									<h3><a href="blog14.html">The Art of Discernment</a></h3>
+									<p>Exercising discernment means being able to distinguish between what's essential for the program, prioritizing tasks, and making informed decisions that drive the project forward.</p>
 								</div>
 							</div>
 						</div>
@@ -327,11 +327,11 @@
 						<!-- Blog 3 -->
 						<div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="blog-entry">
-								<a href="blog05.html" class="blog-img"><img src="images/tech/data-center.jpg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
+								<a href="blog03.html" class="blog-img"><img src="images/tech/data-economy.jpg" class="img-responsive" alt="data economy"></a>
 								<div class="desc">
-									<span><small>November 2022 </small> | <small> Data Architecture </small> | <small> <i class="icon-bubble3"></i> 0</small></span>
-									<h3><a href="blog05.html">Entity Relationship (ER) Diagram</a></h3>
-									<p>Entity Relationship (ER) Diagrams are a visual representation of the table's structure and the relationships between logically related tables.</p>
+									<span><small>August 2022 </small> | <small> Data Structures and Algorithms </small> | <small> <i class="icon-bubble3"></i> 0</small></span>
+									<h3><a href="blog03.html">Data Algorithms</a></h3>
+									<p>Data Algorithms are a set of instructions used to solve a specific problem. Examples of Data Algorithms include search algorithms, sorting algorithms, and graph algorithms.</p>
 								</div>
 							</div>
 						</div>
