--- a/blog-Projects.html
+++ b/blog-Projects.html
@@ -77,7 +77,7 @@
 			<div class="text-center">
 				<div class="author-img" style="background-image: url(images/about.jpeg);"></div>
 				<h1 id="colorlib-logo"><a href="index.html">Carissa O'Connell</a></h1>
-				<span class="position"><a href="index.html">Full Stack Software Developer</a> currently in Florida </span>
+				<p class="position"><a href="index.html">Full Stack Software Developer</a> currently in Florida </p>
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
