--- a/index.html
+++ b/index.html
@@ -74,9 +74,13 @@
 			<div class="text-center">
 				<div class="author-img" style="background-image: url(images/about.jpeg);"></div>
 				<h1 id="colorlib-logo"><a href="index.html">Carissa O'Connell</a></h1>
-				<span class="position"><a href="index.html">Full Stack Software Developer</a> currently in Florida </span>
-				<span class="position"><a href="index-about.html">About</a></span>
-
+				<p class="position"><a href="index.html">Full Stack Software Developer</a> currently in Florida </p>
+				<div class="aside-menu">
+					<span class="position"><a href="index.html">Home</a></span>
+					<span class="position"><a href="index-about.html">About</a></span>
+					<span class="position"><a href="blog-Projects.html">Projects</a></span>
+					<p class="position"><a href="blog-MainIndex.html">Blogs</a></p>
+				  </div>
 			</div>
 
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
