--- a/blog-MainIndex.html
+++ b/blog-MainIndex.html
@@ -72,7 +72,7 @@
 			<div class="text-center">
 				<div class="author-img" style="background-image: url(images/about.jpeg);"></div>
 				<h1 id="colorlib-logo"><a href="index.html">Carissa O'Connell</a></h1>
-				<span class="position"><a href="index.html">Full Stack Software Developer</a> currently in Florida </span>
+				<p class="position"><a href="index.html">Full Stack Software Developer</a> currently in Florida </p>
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
@@ -505,7 +505,7 @@
 						<!-- Blog Photo -->
 						<p>
 							<a href="blog14.html">
-							<img src="images/galaxy.jpg" alt="sql" style="max-width: 100%; height: auto;">
+							<img src="images/galaxy.jpg" alt="galaxy" style="max-width: 100%; height: auto;">
 							</a>
 						</p>
 						<!-- Title -->
