--- a/index-about.html
+++ b/index-about.html
@@ -74,12 +74,28 @@
 			<div class="text-center">
 				<div class="author-img" style="background-image: url(images/about.jpeg);"></div>
 				<h1 id="colorlib-logo"><a href="index.html">Carissa O'Connell</a></h1>
-				<span class="position"><a href="index.html">Full Stack Software Developer</a> currently in Florida </span>
-				
-				<span class="position"><a href="index-about.html">About</a></span>
-				<span class="position"><a href="blog-Projects.html">Projects</a></span>
+				<p class="position"><a href="index.html">Full Stack Software Developer</a> currently in Florida </p>
+				<div class="aside-menu">
+					<span class="position"><a href="index.html">Home</a></span>
+					<span class="position"><a href="index-about.html">About</a></span>
+					<span class="position"><a href="blog-Projects.html">Projects</a></span>
+					<p class="position"><a href="blog-MainIndex.html">Blogs</a></p>
+				  </div>
 
-				<span class="position"><a href="blog-MainIndex.html">Blogs</a></span>
+
+				  <nav id="colorlib-main-menu" role="navigation" class="navbar">
+					<div id="navbar" class="collapse">
+						<ul>
+							<li><a href="#" data-nav-section="work">About</a></li>
+							<li><a href="#" data-nav-section="services">Services</a></li>
+							<li><a href="#" data-nav-section="skills">Skills</a></li>
+							<li><a href="#" data-nav-section="education">Education</a></li>
+							<li><a href="#" data-nav-section="achievements">Achievements</a></li>
+							<li><a href="#" data-nav-section="experience">Experience</a></li>
+							<li><a href="#" data-nav-section="contact">Contact</a></li>
+						</ul>
+					</div>
+				</nav>
 
 			</div>
 			
@@ -747,7 +763,7 @@
 			</section>
 
 
-			<section class="colorlib-about" data-section="about">
+			<section class="colorlib-about" data-section="contact">
 
 				<div class="colorlib-narrow-content">
 					<div class="row">
