--- a/project-antique-games-blog.html
+++ b/project-antique-games-blog.html
@@ -53,7 +53,7 @@
 				<h1 id="colorlib-logo"><a href="index.html">Carissa O'Connell</a></h1>
 				<span class="position"><a href="index.html">Full Stack Software Developer</a> currently in Florida </span>
 			</div>
-
+		
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
 					<ul>
@@ -64,18 +64,18 @@
 					</ul>
 				</div>
 			</nav>
-
+		
 			<div class="colorlib-footer">
 				<ul>
 					<li><a href="mailto:modern.program.geek@gmail.com"><i class="icon-mail"></i></a></li>
 					<li><a href="https://www.linkedin.com/in/carissa-oconnell/"><i class="icon-linkedin2"></i></a></li>
 				</ul>
 			</div>
-
+		
 		<p><small>&copy; <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 			Copyright <script>document.write(new Date().getFullYear());</script> All rights reserved. Made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
 			<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --> </span></small></p>
-
+		
 		</aside>
 		<!-- END COLORLIB-ASIDE -->
 
@@ -136,7 +136,7 @@
 					  <div class="desc">
 						<h3>Carissa O'Connell</h3>
 						<p>Aloha! I am a passionate software developer looking to help people create programs that 
-							help improve business efficiency, connect with nature, and play with logic. 
+							help improve efficiency, connect with nature, and play with logic. 
 						</p>
 					  </div>
 					</div>
