--- a/project-antique-games-blog.html
+++ b/project-antique-games-blog.html
@@ -88,6 +88,7 @@
 							<!-- Topic -->
 							<h7 class="subheading"><b>Antique Games</b></h7>
 							<p><h9><a href="index.html" class="btn-custom mr-2">Home</a></h9></p>
+							<p><h9><a href="blog-Projects.html" class="btn-custom mr-2">Projects</a></h9></p>
 							<p><h9><a href="blog-MainIndex.html" class="btn-custom mr-2">Blogs</a></h9></p>
 						</div>
 					</div>
