--- a/project-word-wizard-blog.html
+++ b/project-word-wizard-blog.html
@@ -53,7 +53,7 @@
 				<h1 id="colorlib-logo"><a href="index.html">Carissa O'Connell</a></h1>
 				<span class="position"><a href="index.html">Full Stack Software Developer</a> currently in Florida </span>
 			</div>
-		
+
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
 					<ul>
@@ -64,18 +64,18 @@
 					</ul>
 				</div>
 			</nav>
-		
+
 			<div class="colorlib-footer">
 				<ul>
 					<li><a href="mailto:modern.program.geek@gmail.com"><i class="icon-mail"></i></a></li>
 					<li><a href="https://www.linkedin.com/in/carissa-oconnell/"><i class="icon-linkedin2"></i></a></li>
 				</ul>
 			</div>
-		
+
 		<p><small>&copy; <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 			Copyright <script>document.write(new Date().getFullYear());</script> All rights reserved. Made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
 			<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --> </span></small></p>
-		
+
 		</aside>
 		<!-- END COLORLIB-ASIDE -->
 
@@ -88,6 +88,7 @@
 							<!-- Topic -->
 							<h7 class="subheading"><b>Word Wizard</b></h7>
 							<p><h9><a href="index.html" class="btn-custom mr-2">Home</a></h9></p>
+							<p><h9><a href="blog-Projects.html" class="btn-custom mr-2">Projects</a></h9></p>
 							<p><h9><a href="blog-MainIndex.html" class="btn-custom mr-2">Blogs</a></h9></p>
 						</div>
 					</div>
