--- a/index-about.html
+++ b/index-about.html
@@ -116,7 +116,7 @@
 <!-- card images -->
 		<div id="colorlib-main">
 
-			<section class="colorlib-about" data-section="about">
+			<section class="colorlib-about" data-section="work">
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-12">
