--- a/project-dark-timber-custom-knives.html
+++ b/project-dark-timber-custom-knives.html
@@ -134,7 +134,7 @@
 
 					<p>Learning how to help a bladesmith promote their work and story has taught me how to design a website that makes it easy, simple, and appealing for people who dont utilize the web often.</p>
                     
-					<p>Check out the website <h10><a href="https://darktimbercustomknives.github.io">Dark Timber Custom Knives!</a></h10>.
+					<p>Check out the website <h10><a href="https://www.darktimbercustomknives.net">Dark Timber Custom Knives!</a></h10>.
 					</p>
                     
 					<!-- End Blog -->
