--- a/project-the-aloha-thread-blog.html
+++ b/project-the-aloha-thread-blog.html
@@ -114,7 +114,7 @@
 					information onto the page.</p>
                     </p>
 
-					<p>Check out the website: <h10><b><a href="https://thealohathread.github.io">The Aloha Thread</a></b></h10></p>
+					<p>Check out the website: <h10><b><a href="https://www.thealohathread.com">The Aloha Thread</a></b></h10></p>
 
 					<h9><b>Screenshots:</b></h9>
 					<p><img src="images/the-aloha-thread/home01.png" alt="the aloha thread home" class="img-fluid"></p>
