--- a/index-about.html
+++ b/index-about.html
@@ -126,10 +126,11 @@
 										<span class="heading-meta">About</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
 										<p><strong>Aloha! I am Carissa O'Connell</strong> </p>
-										<p>Recently, I earned my Bachelor's Degree in Software Development yet I continue to pursue learning more about
-											data structures, developing programs, software testing, and information management strategies everyday. 
-											My studies include utilizing data structures and algorithms in 
-											Java and C++, as well as SQL, HTML, CSS, and Javascript just to name a few.</p>
+										<p>As a passionate Full Stack Software Developer, I harness the power of algorithms to craft innovative solutions that simplify workflows and elevate user experiences. With a strong foundation in mathematics, I approach problems with a creative mindset, always seeking to improve efficiency and accessibility.</p>
+
+										<p>I'm driven by a desire to create technology that makes a meaningful impact on people's lives. Through my work, I aim to design intuitive and aesthetically pleasing programs that empower users to easily find and access the information they need.</p>
+											
+										<p>With a growth mindset and a thirst for new challenges, I'm constantly seeking opportunities to expand my skills and expertise.</p>
 										<p>I enjoy developing programs related to healthcare, finances, learning languages, <a href="project-antique-games-blog.html">board games</a>, and the arts such as sewing and architecture.</p>
 									</div>
 								</div>
