--- a/project-the-aloha-thread-blog.html
+++ b/project-the-aloha-thread-blog.html
@@ -100,7 +100,6 @@
 	    	<div class="container">
 	    		<div class="row">
 	    			<div class="col-lg-8 ftco-animate">
-						<h1>Sorry for the mess. We are working on getting this page updated as soon as possible. Thank you for your patience!</h1>
 	            		<h8 class="mb-3 font-weight-bold">The Aloha Thread</h8>
 
 					<p>Written by</p>
@@ -121,8 +120,25 @@
 					<p><img src="images/the-aloha-thread/home02.png" alt="the aloha thread home" class="img-fluid"></p>
 
 					<h9><b>UI/UX designs</b></h9>
-
+					<p> By combining clean typography, high-quality images, and a responsive layout, we created a website that is both beautiful and functional.</p>
                     
+					<h10><b>UI Design</b></h10>
+					<ul>
+						<li>The website features a clean and minimalist design, characterized by a predominantly white and beige color scheme that exudes a sense of aesthetic sophistication.</li>
+						<li>The typography is clear and readable, with headings and subheadings used to create a clear hierarchy of information.</li>
+						<li>The website features high-quality images and graphics, to emphasize the overall beauty of the Hawaiian culture and lifestyle.</li>
+						<li>The images incorporated into the design thoughtfully convey cultural authenticity, adding depth and nuance to the overall aesthetic.</li>
+					</ul>
+
+					<h10><b>UX Design</b></h10>
+					<ul>
+						<li>User journey is carefully crafted to create a seamless experience.</li>
+						<li>The website's navigation is creates a seamless experience that is simple and intuitive, with a clear menu bar at the top.</li>
+						<li>Content is organized into clear categories, making it easy for users to find what they're looking for</li>
+						<li>The website's layout is responsive, meaning it adapts to different screen sizes and devices, ensuring a smooth user experience across various platforms.</li>
+						<li>The website's loading speed is fast, which is essential for providing a good user experience.</li>
+					</ul>
+
 					<!-- End Blog -->
 	            
 				  <!-- Blog tags -->
